added lab 1 detail

--- a/public-site/topic02/moodle.html
+++ b/public-site/topic02/moodle.html
@@ -16,13 +16,13 @@
      <div class="panel-heading">
        <div class="panel-title">
          <a href="http://wit-computing.github.io/project2-2016/
-topic02/talk-1/version-control1.pdf"> Version Control </a>
+topic02/talk-a-git-intro/version-control1.pdf"> Version Control </a>
        </div>
      </div>
      <div class="panel-body">
        <div class="thumbnail">
          <img src="http://wit-computing.github.io/project2-2016/
-topic02/talk-1/version-control1.png"  class="img-responsive col-lg-12">
+topic02/talk-a-git-intro/version-control1.png"  class="img-responsive col-lg-12">
        </div>
         <blockquote>
           <p>Never lose your work - even if the dog eats it!. Distributed version control allows you to securely save your work, share and  colaborate with others. Several technologies exist that perform this task. We will look at one of the most popular - Git.</p>
@@ -34,6 +34,26 @@ topic02/talk-1/version-control1.png"  class="img-responsive col-lg-12">
 </div>
 
  <div class="row">
+      <div class="col-md-6">
+         <div class="panel panel-danger">
+     <div class="panel-heading">
+       <div class="panel-title">
+         <a href="http://wit-computing.github.io/project2-2016/
+topic02/book-git-lab/index.html"> git-lab-01 </a>
+       </div>
+     </div>
+     <div class="panel-body">
+       <div class="thumbnail">
+         <img src="http://wit-computing.github.io/project2-2016/
+topic02/book-git-lab/img/main.png"  class="img-responsive col-lg-12">
+       </div>
+        <blockquote>
+          <p>The objective of this lab is to learn how to  use Git to manage you project files and colabolrate with others.</p>
+       </blockquote>
+     </div>
+   </div>
+
+      </div>
  <div>
 
   </body>
