--- a/public-site/labwall.html
+++ b/public-site/labwall.html
@@ -82,6 +82,21 @@ figcaption
 
 
 <div class="ui four doubling stackable cards">
+      <a class="ui card" href="topic02/book-git-lab/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="lab large icon"></i></div>
+      <div class="header"> git-lab-01 </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="topic02/book-git-lab/img/main.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>The objective of this lab is to learn how to  use Git to manage you project files and colabolrate with others.</p>
+      </div>
+    </div>
+  </a>
+
 </div>
    </div>
 
