--- a/public-site/talkwall.html
+++ b/public-site/talkwall.html
@@ -92,7 +92,7 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>This talkk provides an introduction to the Project module and introduces the content and structure of the module.</p>
+         <p>This talk introduces  Project, covering the content and structure of the module.</p>
       </div>
     </div>
   </a>
