--- a/public-site/topic01/moodle.html
+++ b/public-site/topic01/moodle.html
@@ -25,7 +25,7 @@ topic01/talk-1/project2-intro.pdf"> Project II </a>
 topic01/talk-1/project2-intro.png"  class="img-responsive col-lg-12">
        </div>
         <blockquote>
-          <p>This talkk provides an introduction to the Project module and introduces the content and structure of the module.</p>
+          <p>This talk introduces  Project, covering the content and structure of the module.</p>
        </blockquote>
      </div>
    </div>
