--- a/public-site/topic01/indexmoodle.html
+++ b/public-site/topic01/indexmoodle.html
@@ -48,7 +48,7 @@ topic01/talk-1/project2-intro.png">
     </div>
     <div class="content">
       <div class="description">
-         <p>This talkk provides an introduction to the Project module and introduces the content and structure of the module.</p>
+         <p>This talk introduces  Project, covering the content and structure of the module.</p>
       </div>
     </div>
   </a>
