added markdown lab

--- a/public-site/topic02/indexmoodle.html
+++ b/public-site/topic02/indexmoodle.html
@@ -70,6 +70,23 @@ topic02/book-git-lab/img/main.png">
     </div>
   </a>
 
+      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
+topic02/book-markdown-lab/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="lab large icon"></i></div>
+      <div class="header"> markdown-lab-01 </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="http://wit-computing.github.io/project2-2016/
+topic02/book-markdown-lab/img/main.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>The objective of this lab is to learn  Markdown, an easy-to-read, easy-to-write plain text format. </p>
+      </div>
+    </div>
+  </a>
+
   </div>
     </div>
   </body>
