--- a/public-site/labwall.html
+++ b/public-site/labwall.html
@@ -97,6 +97,21 @@ figcaption
     </div>
   </a>
 
+      <a class="ui card" href="topic02/book-markdown-lab/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="lab large icon"></i></div>
+      <div class="header"> markdown-lab-01 </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="topic02/book-markdown-lab/img/main.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>The objective of this lab is to learn  Markdown, an easy-to-read, easy-to-write plain text format. </p>
+      </div>
+    </div>
+  </a>
+
 </div>
    </div>
 
