added markdown lab

--- a/public-site/topic02/book-markdown-lab/index.html
+++ b/public-site/topic02/book-markdown-lab/index.html
@@ -118,10 +118,10 @@ h3
 <p>For <strong>Mac</strong> users, this <a href="http://www.slant.co/topics/899/~markdown-editor-for-os-x">review</a>  may help you select a suitable editor.</p>
 <h2>Exercise: Markdown and Github</h2>
 <p>GitHub combines a syntax for formatting text called GitHub Flavoured Markdown with a few unique writing features. 
-In one of the first steps of the GIT-IT tutorial you created a README.md. Update this file using suitable markdown syntax with the following <a href="./exmaple.md">example</a>.</p>
+In one of the first steps of the GIT-IT tutorial you created a README.md. Update this file using suitable markdown syntax with the following <a href="./pages/example.html">example</a>.</p>
   </div>
   <div  class="ui tab segment lab" data-tab="">
-    <h2>Synopsis</h2>
+    <h2>Project Synopsis</h2>
 <p>A short introduction and/ or overview that explains <strong>what</strong> the project is. </p>
 <h2>Code Example</h2>
 <p>Show what the library does as concisely as possible, developers should be able to figure out <strong>how</strong> your project solves their problem by looking at the code example.</p>
