--- a/public-site/topic02/book-markdown-lab/index.html
+++ b/public-site/topic02/book-markdown-lab/index.html
@@ -109,7 +109,7 @@ h3
   </div>
   <div  class="ui tab segment lab" data-tab="01">
     <h2>Markdown</h2>
-<p>Markdown allows you to write in a simplistic syntax with the thought that it will eventually be translated to HTML. Of course, this conversion requires some intervention. It’s possible to run some command line tools to help you parse your Markdown, but the easier track these days is to use one of the many, many applications available to write your Markdown. That’s what we’re discussing in this article — our favorite Markdown writing application.</p>
+<p>Markdown allows you to write in a simplistic syntax that can be converted to HTML and several other formats. Markdown is often used to author readme files, for writing messages in online discussion forums, and to create "rich text" using a plain text editor.</p>
 <h2>Online Tutorial</h2>
 <p>To learn Markdown syntax, go <a href="http://markdowntutorial.com/">here</a>  and complete the interacive tutorial. </p>
 <h2>Editors</h2>
