--- a/public-site/talkwall.html
+++ b/public-site/talkwall.html
@@ -112,6 +112,21 @@ figcaption
     </div>
   </a>
 
+      <a class="ui card" href="topic03/./talk-a-galileo-intro/galileo-intro-1.pdf">
+    <div class="content">
+      <div class="right floated meta"> <i class="film large icon"></i></div>
+      <div class="header"> Introduction to Intel Galileo </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="topic03/talk-a-galileo-intro/galileo-intro-1.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>The Intel Galileo is a devlopment board you can use to make IoT projects. This talk introduces the Galileo and how to set it up in "Arduino" Mode.</p>
+      </div>
+    </div>
+  </a>
+
 </div>
    </div>
 
