--- a/public-site/topic03/index.html
+++ b/public-site/topic03/index.html
@@ -48,25 +48,26 @@ figcaption
 
   <div class="ui container">
   <header class="ui middle aligned center aligned stackable grid segment">
-    <a class="ui blue left corner label">
-      <i class="sitemap big  icon"></i>
-    </a>
-    <div class="eight wide center aligned column">
-      <h2 class="headder">    Project II </h2>
+    <div class="eight wide  column">
+      <h2> Getting Started with Galileo </h2>
+      <!--<h3> () </h3>-->
     </div>
     <div class="one wide column sitemap">
       <div class="popup" data-content="Top Level Topic View">
-        <a href="index.html"> <i class="big sitemap icon"></i>  topics </a>
+        <a href="../index.html"> <i class="big sitemap icon"></i></a>
+        topics
       </div>
     </div>
     <div class="one wide column">
       <div class="popup" data-content="All Presentations">
-        <a href="talkwall.html"> <i class="big film icon"></i>  slides </a>
+        <a href="../talkwall.html"> <i class="big film icon"></i></a>
+        slides
       </div>
     </div>
     <div class="one wide column">
       <div class="popup" data-content="All Labs">
-        <a href="labwall.html"> <i class="big lab icon"></i> labs </a>
+        <a href="../labwall.html"> <i class="big lab icon"></i></a>
+        labs
       </div>
     </div>
     <div class="five wide column">
@@ -82,54 +83,22 @@ figcaption
 
 
 <div class="ui four doubling stackable cards">
-
-    <a class="ui card" href="./topic01/index.html">
+      <a class="ui card" href="./talk-a-galileo-intro/galileo-intro-1.pdf">
     <div class="content">
-      <div class="right floated meta"> <i class="sitemap large icon"></i></div>
-      <div class="header"> Introduction to Project II </div>
+      <div class="right floated meta"> <i class="film large icon"></i></div>
+      <div class="header"> Introduction to Intel Galileo </div>
     </div>
     <div class="ui bordered rounded image">
-      <img src="./topic01/./talk-1/project2-intro.png">
+      <img src="./talk-a-galileo-intro/galileo-intro-1.png">
     </div>
     <div class="content">
       <div class="description">
-         <p>This topic introduces project II. You will cover the general ethos of the project module, the content and what you can expect to learn over the lifetime of the module.</p>
+         <p>The Intel Galileo is a devlopment board you can use to make IoT projects. This talk introduces the Galileo and how to set it up in "Arduino" Mode.</p>
       </div>
     </div>
   </a>
 
-    <a class="ui card" href="./topic02/index.html">
-    <div class="content">
-      <div class="right floated meta"> <i class="sitemap large icon"></i></div>
-      <div class="header"> Version Control Systems </div>
-    </div>
-    <div class="ui bordered rounded image">
-      <img src="./topic02/./talk-a-git-intro/version-control1.png">
-    </div>
-    <div class="content">
-      <div class="description">
-         <p>This topic introduces distributed version control. You will begin to develop of a digital portfolio of your work using a distributed version control system. </p>
-      </div>
-    </div>
-  </a>
-
-    <a class="ui card" href="./topic03/index.html">
-    <div class="content">
-      <div class="right floated meta"> <i class="sitemap large icon"></i></div>
-      <div class="header"> Getting Started with Galileo </div>
-    </div>
-    <div class="ui bordered rounded image">
-      <img src="./topic03/./talk-a-galileo-intro/galileo-intro-1.png">
-    </div>
-    <div class="content">
-      <div class="description">
-         <p>This topic introduces the Intel Galileo development board. Initially you will use it in "Arduino" mode.</p>
-      </div>
-    </div>
-  </a>
-
-</div>
-
+  </div>
    </div>
 
 
