--- a/public-site/labwall.html
+++ b/public-site/labwall.html
@@ -112,6 +112,21 @@ figcaption
     </div>
   </a>
 
+      <a class="ui card" href="topic03/book-wyliodrin-lab/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="lab large icon"></i></div>
+      <div class="header"> wyliodrin-lab-01 </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="topic03/book-wyliodrin-lab/img/main.jpg">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>This tutorial will show you how to setup your Intel Galileo to work with Wyliodrin.</p>
+      </div>
+    </div>
+  </a>
+
 </div>
    </div>
 
