--- a/public-site/topic03/indexmoodle.html
+++ b/public-site/topic03/indexmoodle.html
@@ -53,6 +53,23 @@ topic03/talk-a-galileo-intro/galileo-intro-1.png">
     </div>
   </a>
 
+      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
+topic03/book-wyliodrin-lab/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="lab large icon"></i></div>
+      <div class="header"> wyliodrin-lab-01 </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="http://wit-computing.github.io/project2-2016/
+topic03/book-wyliodrin-lab/img/main.jpg">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>This tutorial will show you how to setup your Intel Galileo to work with Wyliodrin.</p>
+      </div>
+    </div>
+  </a>
+
   </div>
     </div>
   </body>
