--- a/public-site/topic03/indexmoodle.html
+++ b/public-site/topic03/indexmoodle.html
@@ -54,14 +54,31 @@ topic03/talk-a-galileo-intro/galileo-intro-1.png">
   </a>
 
       <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic03/book-wyliodrin-lab/index.html">
+topic03/book-1-assignment-lab/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="lab large icon"></i></div>
+      <div class="header"> assignment </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="http://wit-computing.github.io/project2-2016/
+topic03/book-1-assignment-lab/img/main.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>You will propose and create your own IoT project!</p>
+      </div>
+    </div>
+  </a>
+
+      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
+topic03/book-2-wyliodrin-lab/index.html">
     <div class="content">
       <div class="right floated meta"> <i class="lab large icon"></i></div>
       <div class="header"> wyliodrin-lab-01 </div>
     </div>
     <div class="ui bordered rounded image">
       <img src="http://wit-computing.github.io/project2-2016/
-topic03/book-wyliodrin-lab/img/main.jpg">
+topic03/book-2-wyliodrin-lab/img/main.jpg">
     </div>
     <div class="content">
       <div class="description">
