--- a/public-site/labwall.html
+++ b/public-site/labwall.html
@@ -112,13 +112,28 @@ figcaption
     </div>
   </a>
 
-      <a class="ui card" href="topic03/book-wyliodrin-lab/index.html">
+      <a class="ui card" href="topic03/book-1-assignment-lab/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="lab large icon"></i></div>
+      <div class="header"> assignment </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="topic03/book-1-assignment-lab/img/main.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>You will propose and create your own IoT project!</p>
+      </div>
+    </div>
+  </a>
+
+      <a class="ui card" href="topic03/book-2-wyliodrin-lab/index.html">
     <div class="content">
       <div class="right floated meta"> <i class="lab large icon"></i></div>
       <div class="header"> wyliodrin-lab-01 </div>
     </div>
     <div class="ui bordered rounded image">
-      <img src="topic03/book-wyliodrin-lab/img/main.jpg">
+      <img src="topic03/book-2-wyliodrin-lab/img/main.jpg">
     </div>
     <div class="content">
       <div class="description">
