--- a/public-site/topic03/moodle.html
+++ b/public-site/topic03/moodle.html
@@ -39,13 +39,33 @@ topic03/talk-a-galileo-intro/galileo-intro-1.png"  class="img-responsive col-lg-
      <div class="panel-heading">
        <div class="panel-title">
          <a href="http://wit-computing.github.io/project2-2016/
-topic03/book-wyliodrin-lab/index.html"> wyliodrin-lab-01 </a>
+topic03/book-1-assignment-lab/index.html"> assignment </a>
        </div>
      </div>
      <div class="panel-body">
        <div class="thumbnail">
          <img src="http://wit-computing.github.io/project2-2016/
-topic03/book-wyliodrin-lab/img/main.jpg"  class="img-responsive col-lg-12">
+topic03/book-1-assignment-lab/img/main.png"  class="img-responsive col-lg-12">
+       </div>
+        <blockquote>
+          <p>You will propose and create your own IoT project!</p>
+       </blockquote>
+     </div>
+   </div>
+
+      </div>
+      <div class="col-md-6">
+         <div class="panel panel-danger">
+     <div class="panel-heading">
+       <div class="panel-title">
+         <a href="http://wit-computing.github.io/project2-2016/
+topic03/book-2-wyliodrin-lab/index.html"> wyliodrin-lab-01 </a>
+       </div>
+     </div>
+     <div class="panel-body">
+       <div class="thumbnail">
+         <img src="http://wit-computing.github.io/project2-2016/
+topic03/book-2-wyliodrin-lab/img/main.jpg"  class="img-responsive col-lg-12">
        </div>
         <blockquote>
           <p>This tutorial will show you how to setup your Intel Galileo to work with Wyliodrin.</p>
