--- a/public-site/talkwall.html
+++ b/public-site/talkwall.html
@@ -127,6 +127,21 @@ figcaption
     </div>
   </a>
 
+      <a class="ui card" href="topic03/./talk-b-wyliodrin-programming/programming.pdf">
+    <div class="content">
+      <div class="right floated meta"> <i class="film large icon"></i></div>
+      <div class="header"> Programming using the Wyliodrin Platform </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="topic03/talk-b-wyliodrin-programming/programming.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>This talk covers the programming options available using the Wyliodrin platform.</p>
+      </div>
+    </div>
+  </a>
+
 </div>
    </div>
 
