--- a/public-site/labwall.html
+++ b/public-site/labwall.html
@@ -115,7 +115,7 @@ figcaption
       <a class="ui card" href="topic03/book-1-assignment-lab/index.html">
     <div class="content">
       <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> assignment </div>
+      <div class="header"> Assignment </div>
     </div>
     <div class="ui bordered rounded image">
       <img src="topic03/book-1-assignment-lab/img/main.png">
@@ -138,6 +138,21 @@ figcaption
     <div class="content">
       <div class="description">
          <p>This tutorial will show you how to setup your Intel Galileo to work with Wyliodrin.</p>
+      </div>
+    </div>
+  </a>
+
+      <a class="ui card" href="topic03/book-3-wyliodrin-streams-lab/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="lab large icon"></i></div>
+      <div class="header"> wyliodrin-lab-02 </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="topic03/book-3-wyliodrin-streams-lab/img/main.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>This tutorial will show you how to control the colour of an RGB LED using Sketch and a programming language called Streams.</p>
       </div>
     </div>
   </a>
