--- a/public-site/topic03/book-1-assignment-lab/index.html
+++ b/public-site/topic03/book-1-assignment-lab/index.html
@@ -89,8 +89,8 @@ h3
     </a>
   </header>
   <div class="right tab-menu menu">
-    <a class="active item" data-tab="assignment">
-        assignment
+    <a class="active item" data-tab="Assignment">
+        Assignment
     </a>
       <a class="item" data-tab="01">
         01
@@ -100,7 +100,7 @@ h3
 
 <br><br>
 
-  <div  class="ui tab segment lab" data-tab="assignment">
+  <div  class="ui tab segment lab" data-tab="Assignment">
     <h2>Assignment Specification</h2>
 <p>You will propose and create your own IoT project!</p>
   </div>
