--- a/public-site/index.html
+++ b/public-site/index.html
@@ -128,6 +128,21 @@ figcaption
     </div>
   </a>
 
+    <a class="ui card" href="./topic04/index.html">
+    <div class="content">
+      <div class="right floated meta"> <i class="sitemap large icon"></i></div>
+      <div class="header"> Presentation Skills </div>
+    </div>
+    <div class="ui bordered rounded image">
+      <img src="./topic04/./talk-a-presenting-talk/presentation.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>This topic introduces presentation and communiction skills. </p>
+      </div>
+    </div>
+  </a>
+
 </div>
 
    </div>
