--- a/public-site/topic04/index.html
+++ b/public-site/topic04/index.html
@@ -48,25 +48,26 @@ figcaption
 
   <div class="ui container">
   <header class="ui middle aligned center aligned stackable grid segment">
-    <a class="ui blue left corner label">
-      <i class="film big  icon"></i>
-    </a>
-    <div class="eight wide center aligned column">
-      <h2 class="headder">    Project II </h2>
+    <div class="eight wide  column">
+      <h2> Presentation Skills </h2>
+      <!--<h3> () </h3>-->
     </div>
     <div class="one wide column sitemap">
       <div class="popup" data-content="Top Level Topic View">
-        <a href="index.html"> <i class="big sitemap icon"></i>  topics </a>
+        <a href="../index.html"> <i class="big sitemap icon"></i></a>
+        topics
       </div>
     </div>
     <div class="one wide column">
       <div class="popup" data-content="All Presentations">
-        <a href="talkwall.html"> <i class="big film icon"></i>  slides </a>
+        <a href="../talkwall.html"> <i class="big film icon"></i></a>
+        slides
       </div>
     </div>
     <div class="one wide column">
       <div class="popup" data-content="All Labs">
-        <a href="labwall.html"> <i class="big lab icon"></i> labs </a>
+        <a href="../labwall.html"> <i class="big lab icon"></i></a>
+        labs
       </div>
     </div>
     <div class="five wide column">
@@ -82,73 +83,13 @@ figcaption
 
 
 <div class="ui four doubling stackable cards">
-      <a class="ui card" href="topic01/./talk-1/project2-intro.pdf">
-    <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header"> Project II </div>
-    </div>
-    <div class="ui bordered rounded image">
-      <img src="topic01/talk-1/project2-intro.png">
-    </div>
-    <div class="content">
-      <div class="description">
-         <p>This talk introduces  Project, covering the content and structure of the module.</p>
-      </div>
-    </div>
-  </a>
-
-      <a class="ui card" href="topic02/./talk-a-git-intro/version-control1.pdf">
-    <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header"> Version Control </div>
-    </div>
-    <div class="ui bordered rounded image">
-      <img src="topic02/talk-a-git-intro/version-control1.png">
-    </div>
-    <div class="content">
-      <div class="description">
-         <p>Never lose your work - even if the dog eats it!. Distributed version control allows you to securely save your work, share and  colaborate with others. Several technologies exist that perform this task. We will look at one of the most popular - Git.</p>
-      </div>
-    </div>
-  </a>
-
-      <a class="ui card" href="topic03/./talk-a-galileo-intro/galileo-intro-1.pdf">
-    <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header"> Introduction to Intel Galileo </div>
-    </div>
-    <div class="ui bordered rounded image">
-      <img src="topic03/talk-a-galileo-intro/galileo-intro-1.png">
-    </div>
-    <div class="content">
-      <div class="description">
-         <p>The Intel Galileo is a devlopment board you can use to make IoT projects. This talk introduces the Galileo and how to set it up in "Arduino" Mode.</p>
-      </div>
-    </div>
-  </a>
-
-      <a class="ui card" href="topic03/./talk-b-wyliodrin-programming/programming.pdf">
-    <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header"> Programming using the Wyliodrin Platform </div>
-    </div>
-    <div class="ui bordered rounded image">
-      <img src="topic03/talk-b-wyliodrin-programming/programming.png">
-    </div>
-    <div class="content">
-      <div class="description">
-         <p>This talk covers the programming options available using the Wyliodrin platform.</p>
-      </div>
-    </div>
-  </a>
-
-      <a class="ui card" href="topic04/./talk-a-presenting-talk/presentation.pdf">
+      <a class="ui card" href="./talk-a-presenting-talk/presentation.pdf">
     <div class="content">
       <div class="right floated meta"> <i class="film large icon"></i></div>
       <div class="header">  Presentation Skills Slides </div>
     </div>
     <div class="ui bordered rounded image">
-      <img src="topic04/talk-a-presenting-talk/presentation.png">
+      <img src="./talk-a-presenting-talk/presentation.png">
     </div>
     <div class="content">
       <div class="description">
@@ -157,13 +98,13 @@ figcaption
     </div>
   </a>
 
-      <a class="ui card" href="topic04/./talk-b-Powerful-presentations/presentation.pdf">
+      <a class="ui card" href="./talk-b-Powerful-presentations/presentation.pdf">
     <div class="content">
       <div class="right floated meta"> <i class="film large icon"></i></div>
       <div class="header">  Powerful Presentation Skills </div>
     </div>
     <div class="ui bordered rounded image">
-      <img src="topic04/talk-b-Powerful-presentations/presentation.png">
+      <img src="./talk-b-Powerful-presentations/presentation.png">
     </div>
     <div class="content">
       <div class="description">
@@ -172,13 +113,13 @@ figcaption
     </div>
   </a>
 
-      <a class="ui card" href="topic04/./talk-c-presenting-poster/presentation.pdf">
+      <a class="ui card" href="./talk-c-presenting-poster/presentation.pdf">
     <div class="content">
       <div class="right floated meta"> <i class="film large icon"></i></div>
       <div class="header">  Presentation Skills Leaflet </div>
     </div>
     <div class="ui bordered rounded image">
-      <img src="topic04/talk-c-presenting-poster/presentation.png">
+      <img src="./talk-c-presenting-poster/presentation.png">
     </div>
     <div class="content">
       <div class="description">
@@ -187,7 +128,7 @@ figcaption
     </div>
   </a>
 
-</div>
+  </div>
    </div>
 
 
