--- a/public-site/topic02/indexmoodle.html
+++ b/public-site/topic02/indexmoodle.html
@@ -36,58 +36,80 @@ figcaption
   <body>
     <div class="ui raised segment">
 <div class="ui four doubling stackable cards">
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic02/talk-a-git-intro/version-control1.pdf">
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header"> Version Control </div>
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header"> Version Control </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic02/talk-a-git-intro/version-control1.pdf">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic02/talk-a-git-intro/version-control1.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>Never lose your work - even if the dog eats it!. Distributed version control allows you to securely save your work, share and  colaborate with others. Several technologies exist that perform this task. We will look at one of the most popular - Git.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic02/book-git-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> git-lab-01 </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> git-lab-01 </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic02/book-git-lab/index.html">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic02/book-git-lab/img/main.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>The objective of this lab is to learn how to  use Git to manage you project files and colabolrate with others.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic02/book-markdown-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> markdown-lab-01 </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> github-pages-lab-01 </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic02/book-github-pages-lab/index.html">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
+topic02/book-github-pages-lab/img/main.png">
+    </a>
+    <div class="content">
+      <div class="description">
+         <p>The object of this short lab is to create a web site on Github to complement you project work.</p>
+      </div>
+    </div>
+  </div>
+
+
+      <div class="ui card">
+    <div class="content">
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> markdown-lab-01 </div>
+    </div>
+    <a href="http://wit-computing.github.io/project2-2016/
+topic02/book-markdown-lab/index.html">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic02/book-markdown-lab/img/main.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>The objective of this lab is to learn  Markdown, an easy-to-read, easy-to-write plain text format. </p>
       </div>
     </div>
-  </a>
+  </div>
+
 
   </div>
     </div>
+
   </body>
  </html>
