--- a/public-site/topic02/moodle.html
+++ b/public-site/topic02/moodle.html
@@ -59,6 +59,26 @@ topic02/book-git-lab/img/main.png"  class="img-responsive col-lg-12">
      <div class="panel-heading">
        <div class="panel-title">
          <a href="http://wit-computing.github.io/project2-2016/
+topic02/book-github-pages-lab/index.html"> github-pages-lab-01 </a>
+       </div>
+     </div>
+     <div class="panel-body">
+       <div class="thumbnail">
+         <img src="http://wit-computing.github.io/project2-2016/
+topic02/book-github-pages-lab/img/main.png"  class="img-responsive col-lg-12">
+       </div>
+        <blockquote>
+          <p>The object of this short lab is to create a web site on Github to complement you project work.</p>
+       </blockquote>
+     </div>
+   </div>
+
+      </div>
+      <div class="col-md-6">
+         <div class="panel panel-danger">
+     <div class="panel-heading">
+       <div class="panel-title">
+         <a href="http://wit-computing.github.io/project2-2016/
 topic02/book-markdown-lab/index.html"> markdown-lab-01 </a>
        </div>
      </div>
