--- a/public-site/labwall.html
+++ b/public-site/labwall.html
@@ -82,80 +82,101 @@ figcaption
 
 
 <div class="ui four doubling stackable cards">
-      <a class="ui card" href="topic02/book-git-lab/index.html">
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> git-lab-01 </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> git-lab-01 </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="topic02/book-git-lab/img/main.png">
-    </div>
+    <a href="topic02/book-git-lab/index.html">
+      <img class="ui bordered rounded image" src="topic02/book-git-lab/img/main.png">
+    </a>
     <div class="content">
       <div class="description">
          <p>The objective of this lab is to learn how to  use Git to manage you project files and colabolrate with others.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="topic02/book-markdown-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> markdown-lab-01 </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> github-pages-lab-01 </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="topic02/book-markdown-lab/img/main.png">
+    <a href="topic02/book-github-pages-lab/index.html">
+      <img class="ui bordered rounded image" src="topic02/book-github-pages-lab/img/main.png">
+    </a>
+    <div class="content">
+      <div class="description">
+         <p>The object of this short lab is to create a web site on Github to complement you project work.</p>
+      </div>
     </div>
+  </div>
+
+
+      <div class="ui card">
+    <div class="content">
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> markdown-lab-01 </div>
+    </div>
+    <a href="topic02/book-markdown-lab/index.html">
+      <img class="ui bordered rounded image" src="topic02/book-markdown-lab/img/main.png">
+    </a>
     <div class="content">
       <div class="description">
          <p>The objective of this lab is to learn  Markdown, an easy-to-read, easy-to-write plain text format. </p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="topic03/book-1-assignment-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> Assignment </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> Assignment </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="topic03/book-1-assignment-lab/img/main.png">
-    </div>
+    <a href="topic03/book-1-assignment-lab/index.html">
+      <img class="ui bordered rounded image" src="topic03/book-1-assignment-lab/img/main.png">
+    </a>
     <div class="content">
       <div class="description">
          <p>You will propose and create your own IoT project!</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="topic03/book-2-wyliodrin-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> wyliodrin-lab-01 </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> wyliodrin-lab-01 </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="topic03/book-2-wyliodrin-lab/img/main.jpg">
-    </div>
+    <a href="topic03/book-2-wyliodrin-lab/index.html">
+      <img class="ui bordered rounded image" src="topic03/book-2-wyliodrin-lab/img/main.jpg">
+    </a>
     <div class="content">
       <div class="description">
          <p>This tutorial will show you how to setup your Intel Galileo to work with Wyliodrin.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="topic03/book-3-wyliodrin-streams-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> wyliodrin-lab-02 </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> wyliodrin-lab-02 </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="topic03/book-3-wyliodrin-streams-lab/img/main.png">
-    </div>
+    <a href="topic03/book-3-wyliodrin-streams-lab/index.html">
+      <img class="ui bordered rounded image" src="topic03/book-3-wyliodrin-streams-lab/img/main.png">
+    </a>
     <div class="content">
       <div class="description">
          <p>This tutorial will show you how to control the colour of an RGB LED using Sketch and a programming language called Streams.</p>
       </div>
     </div>
-  </a>
+  </div>
+
 
 </div>
    </div>
@@ -178,6 +199,7 @@ figcaption
 $(document).ready(function()
 {
   $("img").addClass ("ui image");
+  $('.ui.embed').embed();
 
   var images = $(".lab img");
   jQuery.each(images, function(i)  {
@@ -190,6 +212,8 @@ $(document).ready(function()
       $(div_label).insertBefore(images[i]);
     }
   });
+
+
 })    </script>
 
   </body>
