--- a/public-site/topic02/book-github-pages-lab/index.html
+++ b/public-site/topic02/book-github-pages-lab/index.html
@@ -85,12 +85,12 @@ h3
   <header class="header item">
     <a href="../index.html">
       <i class="sitemap icon"></i>
-      Getting Started with Galileo
+      Version Control Systems
     </a>
   </header>
   <div class="right tab-menu menu">
-    <a class="active item" data-tab="Assignment">
-        Assignment
+    <a class="active item" data-tab="github-pages-lab-01">
+        github-pages-lab-01
     </a>
       <a class="item" data-tab="01">
         01
@@ -100,13 +100,18 @@ h3
 
 <br><br>
 
-  <div  class="ui tab segment lab" data-tab="Assignment">
-    <h2>Assignment Specification</h2>
-<p>You will propose and create your own IoT project!</p>
+  <div  class="ui tab segment lab" data-tab="github-pages-lab-01">
+    <h1>Communicating your Project using Github Pages</h1>
+<p>The object of this short lab is to create a web site on Github to complement you project work.</p>
   </div>
   <div  class="ui tab segment lab" data-tab="01">
-    <h2>Assignment Specification</h2>
-<p>Download the specification from <a href="./files/assignment.pdf">here</a> </p>
+    <h3>Web Pages</h3>
+<p>One way to help publicise your work is to create a web page that expresses your project concept to the wider internet community. Whereas a <em>readme.md</em> file in your project will give a brief technical overview of your project,  a web site can provide a more expressive and comprehinsive descrition of work, including any supporting resources such as training/instuctional videos and documentation. </p>
+<p>Some good examples of project websites can be found at the following links:</p>
+<p>http://facebook.github.io/react-native/
+http://wit-computing.github.io/web-services-2016/</p>
+<p>This tutorial will bring you through how to create project pages for your IoT project.</p>
+<p>Follow the steps described <a href="https://pages.github.com/">here</a>  and select the "Project Site" option.</p>
   </div>
 <script>
 $('.ui.menu .item')
