--- a/public-site/topic03/book-2-wyliodrin-lab/index.html
+++ b/public-site/topic03/book-2-wyliodrin-lab/index.html
@@ -185,6 +185,7 @@ $('.ui.menu .item')
 $(document).ready(function()
 {
   $("img").addClass ("ui image");
+  $('.ui.embed').embed();
 
   var images = $(".lab img");
   jQuery.each(images, function(i)  {
@@ -197,6 +198,8 @@ $(document).ready(function()
       $(div_label).insertBefore(images[i]);
     }
   });
+
+
 })    </script>
 
   </body>
