--- a/public-site/topic03/book-3-wyliodrin-streams-lab/index.html
+++ b/public-site/topic03/book-3-wyliodrin-streams-lab/index.html
@@ -220,6 +220,7 @@ $('.ui.menu .item')
 $(document).ready(function()
 {
   $("img").addClass ("ui image");
+  $('.ui.embed').embed();
 
   var images = $(".lab img");
   jQuery.each(images, function(i)  {
@@ -232,6 +233,8 @@ $(document).ready(function()
       $(div_label).insertBefore(images[i]);
     }
   });
+
+
 })    </script>
 
   </body>
