--- a/public-site/topic03/indexmoodle.html
+++ b/public-site/topic03/indexmoodle.html
@@ -36,92 +36,98 @@ figcaption
   <body>
     <div class="ui raised segment">
 <div class="ui four doubling stackable cards">
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic03/talk-a-galileo-intro/galileo-intro-1.pdf">
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header"> Introduction to Intel Galileo </div>
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header"> Introduction to Intel Galileo </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic03/talk-a-galileo-intro/galileo-intro-1.pdf">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic03/talk-a-galileo-intro/galileo-intro-1.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>The Intel Galileo is a devlopment board you can use to make IoT projects. This talk introduces the Galileo and how to set it up in "Arduino" Mode.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic03/talk-b-wyliodrin-programming/programming.pdf">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header"> Programming using the Wyliodrin Platform </div>
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header"> Programming using the Wyliodrin Platform </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic03/talk-b-wyliodrin-programming/programming.pdf">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic03/talk-b-wyliodrin-programming/programming.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>This talk covers the programming options available using the Wyliodrin platform.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic03/book-1-assignment-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> Assignment </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> Assignment </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic03/book-1-assignment-lab/index.html">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic03/book-1-assignment-lab/img/main.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>You will propose and create your own IoT project!</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic03/book-2-wyliodrin-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> wyliodrin-lab-01 </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> wyliodrin-lab-01 </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic03/book-2-wyliodrin-lab/index.html">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic03/book-2-wyliodrin-lab/img/main.jpg">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>This tutorial will show you how to setup your Intel Galileo to work with Wyliodrin.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic03/book-3-wyliodrin-streams-lab/index.html">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="lab large icon"></i></div>
-      <div class="header"> wyliodrin-lab-02 </div>
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> wyliodrin-lab-02 </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic03/book-3-wyliodrin-streams-lab/index.html">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic03/book-3-wyliodrin-streams-lab/img/main.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>This tutorial will show you how to control the colour of an RGB LED using Sketch and a programming language called Streams.</p>
       </div>
     </div>
-  </a>
+  </div>
+
 
   </div>
     </div>
+
   </body>
  </html>
