--- a/public-site/topic04/indexmoodle.html
+++ b/public-site/topic04/indexmoodle.html
@@ -36,58 +36,62 @@ figcaption
   <body>
     <div class="ui raised segment">
 <div class="ui four doubling stackable cards">
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic04/talk-a-presenting-talk/presentation.pdf">
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header">  Presentation Skills Slides </div>
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header">  Presentation Skills Slides </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic04/talk-a-presenting-talk/presentation.pdf">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic04/talk-a-presenting-talk/presentation.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>Presentation skills Slides from WIT Careers Centre.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic04/talk-b-Powerful-presentations/presentation.pdf">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header">  Powerful Presentation Skills </div>
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header">  Powerful Presentation Skills </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic04/talk-b-Powerful-presentations/presentation.pdf">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic04/talk-b-Powerful-presentations/presentation.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>This document discusses how to approach presentations. This topic uses resources from WIT Careers Centre.</p>
       </div>
     </div>
-  </a>
+  </div>
 
-      <a class="ui card" href="http://wit-computing.github.io/project2-2016/
-topic04/talk-c-presenting-poster/presentation.pdf">
+
+      <div class="ui card">
     <div class="content">
-      <div class="right floated meta"> <i class="film large icon"></i></div>
-      <div class="header">  Presentation Skills Leaflet </div>
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header">  Presentation Skills Leaflet </div>
     </div>
-    <div class="ui bordered rounded image">
-      <img src="http://wit-computing.github.io/project2-2016/
+    <a href="http://wit-computing.github.io/project2-2016/
+topic04/talk-c-presenting-poster/presentation.pdf">
+      <img class="ui bordered rounded image" src="http://wit-computing.github.io/project2-2016/
 topic04/talk-c-presenting-poster/presentation.png">
-    </div>
+    </a>
     <div class="content">
       <div class="description">
          <p>Presentation skills leaflet from WIT Careers Centre.</p>
       </div>
     </div>
-  </a>
+  </div>
+
 
   </div>
     </div>
+
   </body>
  </html>
