--- a/public-site/topic05/index.html
+++ b/public-site/topic05/index.html
@@ -49,7 +49,7 @@ figcaption
   <div class="ui container">
   <header class="ui middle aligned center aligned stackable grid segment">
     <div class="eight wide  column">
-      <h2> Presentation Skills </h2>
+      <h2> IoT & Web Servers </h2>
       <!--<h3> () </h3>-->
     </div>
     <div class="one wide column sitemap">
@@ -86,46 +86,14 @@ figcaption
       <div class="ui card">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header">  Presentation Skills Slides </div>
+        <div class="header">  Web Servers </div>
     </div>
-    <a href="./talk-a-presenting-talk/presentation.pdf">
-      <img class="ui bordered rounded image" src="./talk-a-presenting-talk/presentation.png">
+    <a href="./talk-a-Web-Servers/web_servers.pdf">
+      <img class="ui bordered rounded image" src="./talk-a-Web-Servers/web_servers.png">
     </a>
     <div class="content">
       <div class="description">
-         <p>Presentation skills Slides from WIT Careers Centre.</p>
-      </div>
-    </div>
-  </div>
-
-
-      <div class="ui card">
-    <div class="content">
-        <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header">  Powerful Presentation Skills </div>
-    </div>
-    <a href="./talk-b-Powerful-presentations/presentation.pdf">
-      <img class="ui bordered rounded image" src="./talk-b-Powerful-presentations/presentation.png">
-    </a>
-    <div class="content">
-      <div class="description">
-         <p>This document discusses how to approach presentations. This topic uses resources from WIT Careers Centre.</p>
-      </div>
-    </div>
-  </div>
-
-
-      <div class="ui card">
-    <div class="content">
-        <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header">  Presentation Skills Leaflet </div>
-    </div>
-    <a href="./talk-c-presenting-poster/presentation.pdf">
-      <img class="ui bordered rounded image" src="./talk-c-presenting-poster/presentation.png">
-    </a>
-    <div class="content">
-      <div class="description">
-         <p>Presentation skills leaflet from WIT Careers Centre.</p>
+         <p>Web Servers are a key technology for IoT. This talk discusses web servers and how to implement a simple web server on an IoT device.</p>
       </div>
     </div>
   </div>
